# physical-ai-robot

./: .gitignore  README.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  middleware.py
backend/app/api/v1/: router.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  step.py
backend/app/application/services/: __init__.py  memory_service.py  mission_service.py  planner_service.py  robot_service.py  speech_service.py  vision_service.py
backend/app/core/: __init__.py  config.py  container.py  exceptions.py  logging.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  memory.py  mission.py  robot.py
backend/app/domain/interfaces/: __init__.py  behavior.py  memory.py  planner.py  repositories.py  speech.py  state_store.py  vision.py
backend/app/domain/value_objects/: __init__.py  enums.py  perception.py  plan.py  robot_context.py  speech.py  velocity.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/behaviors/: __init__.py  base.py  follow.py  idle.py  manager.py  registry.py  search.py  stop.py
backend/app/infrastructure/database/: __init__.py  base.py  mappers.py  session.py
backend/app/schemas/: __init__.py  common.py  mission.py  robot.py
backend/app/utils/: __init__.py  media.py  timing.py
backend/tests/: conftest.py  test_api.py  test_behaviors.py  test_domain.py  test_planner.py  test_robot_service.py  test_vision.py
(+105 files in other folders)
