[project]
name = "physical-ai-robot-brain"
version = "0.1.0"
description = "Backend 'Robot Brain' for a Physical AI Robot (Android + ESP32 client). Clean Architecture + DDD."
requires-python = ">=3.12"
readme = "README.md"

# Runtime dependencies are pinned in requirements.txt (used by Docker). This block
# mirrors them so the project is pip-installable as a package too.
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "websockets==14.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "SQLAlchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "greenlet==3.1.1",
    "redis==5.2.1",
    "numpy==1.26.4",
    "opencv-python-headless==4.10.0.84",
    "structlog==24.4.0",
]

[project.optional-dependencies]
ml = ["torch==2.5.1"]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "anyio==4.7.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is intentional

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
